--- a/MDK-ARM/FENGDI_PRO/FDI_PRO_500.build_log.htm
+++ b/MDK-ARM/FENGDI_PRO/FDI_PRO_500.build_log.htm
@@ -22,15 +22,20 @@ Dialog DLL:      TARMSTM.DLL V1.64.0.0
  
 <h2>Project:</h2>
 E:\DRV8825_SPI_Master_soft\MDK-ARM\SPI_Master_I2C_Slave.uvprojx
-Project File Date:  03/24/2018
+Project File Date:  04/06/2018
 
 <h2>Output:</h2>
 Build target 'SPI_MASTER_I2C_SLAVE'
-compiling bsp_StepMotor.c...
+compiling a1_fun.c...
+..\Src\bsp\A1_FUN\a1_fun.c(59): warning:  #111-D: statement is unreachable
+                if(HAL_GPIO_ReadPin(GPIO_PB8,GPIO_PB8_PIN)==0)//||(stop_key_flag==1))
+..\Src\bsp\A1_FUN\a1_fun.c(267): warning:  #111-D: statement is unreachable
+                        break;
+..\Src\bsp\A1_FUN\a1_fun.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=24696 RO-data=368 RW-data=88 ZI-data=5208  
+Program Size: Code=24672 RO-data=368 RW-data=88 ZI-data=5208  
 FromELF: creating hex file...
-".\FENGDI_PRO\FDI_PRO_500.axf" - 0 Error(s), 0 Warning(s).
+".\FENGDI_PRO\FDI_PRO_500.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
   E:\DRV8825_SPI_Master_soft\MDK-ARM\RTE
