--- a/MDK-ARM/FENGDI_PRO/FDI_PRO_500.build_log.htm
+++ b/MDK-ARM/FENGDI_PRO/FDI_PRO_500.build_log.htm
@@ -26,9 +26,9 @@ Project File Date:  04/07/2018
 
 <h2>Output:</h2>
 Build target 'SPI_MASTER_I2C_SLAVE'
-compiling main.c...
+compiling drv8825.c...
 linking...
-Program Size: Code=24868 RO-data=368 RW-data=92 ZI-data=5212  
+Program Size: Code=25700 RO-data=368 RW-data=92 ZI-data=5212  
 FromELF: creating hex file...
 ".\FENGDI_PRO\FDI_PRO_500.axf" - 0 Error(s), 0 Warning(s).
 
